--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -12,6 +12,9 @@
         }
       }
     },
+    "'%@' isn't known to VirusTotal" : {
+      "comment" : "'%@' isn't known to VirusTotal"
+    },
     "a new version (%@) is available!" : {
       "comment" : "a new version (%@) is available!",
       "localizations" : {
@@ -211,6 +214,9 @@
         }
       }
     },
+    "ERROR: %@" : {
+      "comment" : "ERROR: %@"
+    },
     "ERROR: Failed to compare scans" : {
       "comment" : "ERROR: Failed to compare scans",
       "localizations" : {
@@ -268,6 +274,7 @@
     },
     "failed to submit '%@' to VirusTotal (HTTP response %ld)." : {
       "comment" : "failed to submit '%@' to VirusTotal (HTTP response %ld).",
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -410,6 +417,7 @@
     },
     "No results found for '%@'" : {
       "comment" : "No results found for '%@'",
+      "extractionState" : "stale",
       "localizations" : {
         "es" : {
           "stringUnit" : {
@@ -591,6 +599,7 @@
     },
     "Submitting '%@'" : {
       "comment" : "Submitting '%@'",
+      "extractionState" : "stale",
       "localizations" : {
         "es" : {
           "stringUnit" : {
@@ -599,6 +608,9 @@
           }
         }
       }
+    },
+    "Submitting '%@'..." : {
+      "comment" : "Submitting '%@'..."
     },
     "This allows the app to perform a comprehensive scan.\n\nIn System Preferences:\r ▪ Click the 🔒 to authenticate\r ▪ Click the ➕ to add KnockKnock.app\n" : {
       "comment" : "This allows the app to perform a comprehensive scan.\n\nIn System Preferences:\r ▪ Click the 🔒 to authenticate\r ▪ Click the ➕ to add KnockKnock.app\n",
