--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -13,7 +13,15 @@
       }
     },
     "'%@' isn't known to VirusTotal" : {
-      "comment" : "'%@' isn't known to VirusTotal"
+      "comment" : "'%@' isn't known to VirusTotal",
+      "localizations" : {
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "'%@' no está en VirusTotal"
+          }
+        }
+      }
     },
     "a new version (%@) is available!" : {
       "comment" : "a new version (%@) is available!",
@@ -115,7 +123,15 @@
       }
     },
     "Commands executed at shell launch" : {
-      "comment" : "Commands executed at shell launch"
+      "comment" : "Commands executed at shell launch",
+      "localizations" : {
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Comandos ejecutados al iniciar el shell"
+          }
+        }
+      }
     },
     "current user's cron jobs" : {
       "comment" : "current user's cron jobs",
@@ -205,20 +221,16 @@
         }
       }
     },
-    "ERROR:\nVirusTotal query for '%@' failed" : {
-      "comment" : "ERROR:\nVirusTotal query for '%@' failed",
-      "extractionState" : "stale",
+    "ERROR: %@" : {
+      "comment" : "ERROR: %@",
       "localizations" : {
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "ERROR:\nLa consulta de VirusTotal para '%@' falló"
+            "value" : "ERROR: %@"
           }
         }
       }
-    },
-    "ERROR: %@" : {
-      "comment" : "ERROR: %@"
     },
     "ERROR: Failed to compare scans" : {
       "comment" : "ERROR: Failed to compare scans",
@@ -275,24 +287,6 @@
         }
       }
     },
-    "failed to submit '%@' to VirusTotal (HTTP response %ld)." : {
-      "comment" : "failed to submit '%@' to VirusTotal (HTTP response %ld).",
-      "extractionState" : "stale",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "failed to submit '%1$@' to VirusTotal (HTTP response %2$ld)."
-          }
-        },
-        "es" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "falló al enviar '%1$@' a VirusTotal (respuesta HTTP %2$ld)."
-          }
-        }
-      }
-    },
     "Found %lu persistent (non-OS) items" : {
       "comment" : "Found %lu persistent (non-OS) items",
       "localizations" : {
@@ -311,18 +305,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Se encontraron %lu  ítems persistentes"
-          }
-        }
-      }
-    },
-    "HTTP reponse: %ld" : {
-      "comment" : "HTTP reponse: %ld",
-      "extractionState" : "stale",
-      "localizations" : {
-        "es" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Respuesta HTTP: %ld"
           }
         }
       }
@@ -361,7 +343,14 @@
       }
     },
     "KnockKnock needs Full Disk Access to perform a complete system scan.\n\nClick 'Open' to open %@ and grant access." : {
-
+      "localizations" : {
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "KnockKnock necesita Acceso total al disco para realizar un análisis completo del sistema. \n\nHaz clic en “Abrir” para abrir %@ y conceder el acceso."
+          }
+        }
+      }
     },
     "libs inserted by DYLD_INSERT_LIBRARIES" : {
       "comment" : "libs inserted by DYLD_INSERT_LIBRARIES",
@@ -370,17 +359,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "libs insertadas por DYLD_INSERT_LIBRARIES"
-          }
-        }
-      }
-    },
-    "NEW ITEMS:\r\n" : {
-      "comment" : "NEW ITEMS:\r\n",
-      "localizations" : {
-        "es" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "ITEMS NUEVOS:"
           }
         }
       }
@@ -418,41 +396,13 @@
         }
       }
     },
-    "No results found for '%@'" : {
-      "comment" : "No results found for '%@'",
-      "extractionState" : "stale",
-      "localizations" : {
-        "es" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "No se encontraron resultados para '%@'"
-          }
-        }
-      }
-    },
-    "OK" : {
-      "comment" : "OK",
-      "extractionState" : "stale",
-      "localizations" : {
-        "es" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "OK"
-          }
-        }
-      }
-    },
     "Open" : {
-      "comment" : "Open"
-    },
-    "Open 'System Preferences' to give KnockKnock Full Disk Access?" : {
-      "comment" : "Open 'System Preferences' to give KnockKnock Full Disk Access?",
-      "extractionState" : "stale",
+      "comment" : "Open",
       "localizations" : {
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "¿Abrir 'Preferencias del Sistema' para dar a KnockKnock acceso total al disco?"
+            "value" : "Abrir"
           }
         }
       }
@@ -497,17 +447,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "paquetes de quickLook registrados"
-          }
-        }
-      }
-    },
-    "REMOVED ITEMS:\r\n" : {
-      "comment" : "REMOVED ITEMS:\r\n",
-      "localizations" : {
-        "es" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "REMOVER ITEMS:"
           }
         }
       }
@@ -600,29 +539,13 @@
         }
       }
     },
-    "Submitting '%@'" : {
-      "comment" : "Submitting '%@'",
-      "extractionState" : "stale",
-      "localizations" : {
-        "es" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Enviando '%@'"
-          }
-        }
-      }
-    },
     "Submitting '%@'..." : {
-      "comment" : "Submitting '%@'..."
-    },
-    "This allows the app to perform a comprehensive scan.\n\nIn System Preferences:\r ▪ Click the 🔒 to authenticate\r ▪ Click the ➕ to add KnockKnock.app\n" : {
-      "comment" : "This allows the app to perform a comprehensive scan.\n\nIn System Preferences:\r ▪ Click the 🔒 to authenticate\r ▪ Click the ➕ to add KnockKnock.app\n",
-      "extractionState" : "stale",
+      "comment" : "Submitting '%@'...",
       "localizations" : {
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Esto permite que la aplicación realice un escaneo completo.\n\nEn Preferencias del Sistema: ▪ Haz clic en el 🔒 para autenticarte ▪ Haz clic en el ➕ para añadir KnockKnock.app"
+            "value" : "Enviando '%@'..."
           }
         }
       }
@@ -683,7 +606,15 @@
       }
     },
     "VirusTotal Results: N/A (No API Key)" : {
-      "comment" : "VirusTotal Results: N/A (No API Key)"
+      "comment" : "VirusTotal Results: N/A (No API Key)",
+      "localizations" : {
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Resultados de VirusTotal: N/D (Sin clave de API)"
+          }
+        }
+      }
     },
     "VirusTotal:\r\n %lu flagged item(s)\r\n %lu unknown item(s)" : {
       "comment" : "VirusTotal:\r\n %lu flagged item(s)\r\n %lu unknown item(s)",
